# arcaflow-plugin-ltp

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  set-plugin-name.sh
.github/workflows/: workflow.yaml
arcaflow_plugin_ltp/: ltp_logs_parsing.py  ltp_plugin.py  ltp_schema.py
arcaflow_plugin_template_python/: template_python_plugin.py
tests/: test_arcaflow_plugin_ltp.py  test_arcaflow_plugin_template_python.py
